--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Livecoding GIT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.cdd">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
+
+  <header>
+    <h1>Coucou !!</h1>
+  </header>
+
+  <footer>
+    <ul>
+      <li>Des liens</li>
+    </ul>
+  </footer>
   
 </body>
 </html>
