--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Livecoding GIT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.cdd">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
 <body>
+
   
+  <div class="navbar">
+    <div class="nav-item">item 1</div>
+    <div class="nav-item">item 2</div>
+    <div class="nav-item">item 3</div>
+  </div>
+
 </body>
 </html>
