--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
-<body>
 
-  <header>
-    <h1>Coucou !!</h1>
-  </header>
-  
-  <div class="navbar">
-    <div class="nav-item">item 1</div>
-    <div class="nav-item">item 2</div>
-    <div class="nav-item">item 3</div>
+<body>
+  <div class="content">
+    <div id="students" class="students">
+      <div class="student">
+        <div class="photo">
+          <img src="https://timedotcom.files.wordpress.com/2014/07/301386_full1.jpg" />
+        </div>
+        <div class="name">
+          <span class="lastname">potter</span>
+          <span class="firstname">harry</span>
+          <span class="job">wizard</span>
+        </div>
+      </div>
+    </div>
+    <div class="button">
+      <button id="random-student">Random Students</button>
+    </div>
   </div>
 
-  <footer>
-    <ul>
-      <li>Des liens</li>
-    </ul>
-  </footer>
-  
-  
-
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
