ajout dojo strToLower + lc dom

--- a/students/index.html
+++ b/students/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="content">
     <div id="students" class="students">
-      <div class="student">
+      <a class="student" href="#">
         <div class="photo">
           <img src="https://timedotcom.files.wordpress.com/2014/07/301386_full1.jpg" />
         </div>
@@ -21,10 +21,12 @@
           <span class="firstname">harry</span>
           <span class="job">wizard</span>
         </div>
-      </div>
+      </a>
     </div>
     <div class="button">
-      <button id="random-student">Random Students</button>
+      <button id="show-students">Students</button>
+      <button id="show-profs">Profs</button>
+      <button id="show-all">All</button>
     </div>
   </div>
 
